src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTShaderImageLoadStore_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTShaderImageLoadStore_StringErrorContext.class */
public final class EXTShaderImageLoadStore_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBindImageTextureEXT(IIIZIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTShaderImageLoadStoreErrorContext");
        methods.put("glMemoryBarrierEXT(I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTShaderImageLoadStoreErrorContext");
        return methods;
    }
}
